changed social options format

--- a/index.html
+++ b/index.html
@@ -8,20 +8,15 @@
         <input type="text" name="name" placeholder="Your Name"><br>
         <input type="text" name="company" placeholder="Your Company"><br>
         <input type="text" name="title" placeholder="Your Title"><br>
-        <input type="url" name="homepage" placeholder="Your URL">
-          <select name="social">
-            <option value="facebook">Facebook</option>
-            <option value="twitter">Twitter</option>
-            <option value="instagram">Instagram</option>
-            <option value="github">Github</option>
-            <option value="medium">Medium</option>
-            <option value="website">Website</option>
-          </select><br>
+        <input type="url" name="homepage" placeholder="Your Website">
+        <input type="text" name="facebook" placeholder="Facebook Username">
+        <input type="text" name="twitter" placeholder="Twitter Username">
+        <input type="text" name="instagram" placeholder="Instagram Username">
+        <input type="text" name="github" placeholder="Github Username">
+        <input type="text" name="medium" placeholder="Medium Username (include @)">
         <input type="text" name="bio" placeholder="Your bio"><br>
 
         <input type="submit" value="Submit">
       </form>
-
     </body>
-
 </html>
