--- a/form.html
+++ b/form.html
@@ -20,9 +20,22 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Login to create your personal card</p>
-        <p><img src="img/facebook.png"></p>
-        <p><img src="img/twitter.png"></p>
+     <form>
+        Upload Photo<br>
+        <input type="file" name="photo"><br>
+        <input type="text" name="name" placeholder="Your Name"><br>
+        <input type="text" name="company" placeholder="Your Company"><br>
+        <input type="text" name="title" placeholder="Your Title"><br>
+        <input type="url" name="homepage" placeholder="Your Website"><br>
+        <input type="text" name="facebook" placeholder="Facebook Username"><br>
+        <input type="text" name="twitter" placeholder="Twitter Username"><br>
+        <input type="text" name="instagram" placeholder="Instagram Username"><br>
+        <input type="text" name="github" placeholder="Github Username"><br>
+        <input type="text" name="medium" placeholder="Medium Username (include @)"><br>
+        <input type="text" name="bio" placeholder="Your bio"><br>
+
+        <input type="submit" value="Submit">
+      </form>
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
