added google sign in image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <p>Login to create your personal card</p>
         <p><img src="img/facebook.png"></p>
         <p><img src="img/twitter.png"></p>
+        <p><img src="img/google.png"></p>
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
